@@ -1,5 +1,10 @@
 2015-11-26  Miloslav Trmač  <mitr@redhat.com>
 
+	* src/bridge.py (SignRPMsReadReplyThread._real_run): On exceptions,
+	shut down the server socket to cause *RequestThread to terminate even
+	if the server is blocking and waiting for this thread to continue reading
+	its replies.
+
 	* src/utils.py (run_worker_threads): Do not log exceptions after
 	waiting on a thread, the thread has logged it already at termination
 	time.
